@@ -1,3 +1,7 @@
+2010-07-21    Michael Schwendt <mschwendt@users.sf.net>
+
+	* src/main.c, src/configure.in: port to Audacious 2.4 beta1 API
+
 2010-07-10    Michael Schwendt <mschwendt@users.sf.net>
 
 	* configure.in: endian check is needed
